# ftm-types

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  download.sh  justfile
.github/workflows/: rust.yml
examples/: builder.rs  file_entity_mapping.rs  first_steps.rs  trait_polymorphism.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/fuzz_ftm_json/: empty_properties.json  minimal.json  multi_values.json  special_chars.json  unicode_content.json  valid_company.json  valid_ownership.json  valid_payment.json  valid_person.json  valid_sanction.json
fuzz/fuzz_targets/: fuzz_ftm_json.rs  fuzz_ftm_structured.rs  fuzz_inheritance.rs  fuzz_yaml_schema.rs
sample/: de_abgeordnetenwatch_sidejobs.ftm.json.zst  de_abgeordnetenwatch_sponsoring.ftm.json.zst
schemas/4.4.1/: Company.yaml  LegalEntity.yaml  Organization.yaml  Person.yaml  PublicBody.yaml
schemas/4.6.0/: Address.yaml  CallForTenders.yaml  Company.yaml  Contract.yaml  CryptoWallet.yaml  Event.yaml  Family.yaml  Identification.yaml  Image.yaml  Interval.yaml  LegalEntity.yaml  License.yaml  Occupancy.yaml  Person.yaml  Project.yaml  ProjectParticipant.yaml  Sanction.yaml  TaxRoll.yaml  Vehicle.yaml
schemas/4.7.0/: CryptoWallet.yaml  Occupancy.yaml  Ownership.yaml  Risk.yaml  Thing.yaml  Vessel.yaml
schemas/4.9.2/: Associate.yaml  Company.yaml  Directorship.yaml  EconomicActivity.yaml  LegalEntity.yaml  Occupancy.yaml  Organization.yaml  Ownership.yaml  Passport.yaml  Person.yaml  Position.yaml  Thing.yaml  UserAccount.yaml  Vehicle.yaml
src/: codegen.rs  lib.rs  main.rs  schema.rs
tests/: ftm_random_parsing.rs
