[package]
name = "ftm-types"
version = "0.1.0"
edition = "2024"
authors = ["Christian Stefanescu"]
description = "FollowTheMoney types code generator for Rust"
repository = "https://github.com/stchris/ftm-rs"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Code generation
quote = "1.0"
syn = "2.0"
prettyplease = "0.2"
proc-macro2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

enum-derived = {version = "0.9", optional = true}

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "ftm-types"
path = "src/main.rs"

[features]
rand = ["enum-derived"]
builder = []